--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-streamlit==1.35.0
-pandas==2.2.2
-scikit-learn==1.4.2
-numpy==1.26.4
+streamlit
+pandas
+numpy
+scikit-learn
+xgboost
+matplotlib
+seaborn
+sqlite3
+joblib
